Address @tnorimat review comments
Signed-off-by: Awambeng Rodrick <awambengrodrick@gmail.com>